# engram

./: .gitignore  LICENSE  README.md  pyproject.toml  slack-app-manifest.yaml
.github/workflows/: ci.yml
docs/: 06-self-improvement-loop.md  INSTALL.md  footguns.md  hitl.md  launchd-smoketest.md  m4-report.md  mcp.md  memory-search-scoping.md  permission-tiers-plan.md  permission-tiers.md  slack-app-setup.md  typing-policy.md
launchd/: com.engram.bridge.plist  com.engram.v3.nightly.plist  com.engram.v3.smoketest.plist  com.engram.v3.watchdog.plist
migrations/: 20260422_0001_summaries_unique_channel_day_trigger.sql
scripts/: cost_experiment.py  engram_nightly_launchd.sh  engram_watchdog.sh  install.sh  install_launchd.sh  smoke_test.py
scripts/nightly/: calibrate_dedup.py  harvest.py
scripts/prompts/: nightly-synthesis-prompt.md
specs/: slack-setup-screenshot-shotlist.md
src/engram/: __init__.py  _slack_types.py  agent.py  bootstrap.py  budget.py  cli.py  cli_channels.py  config.py  costs.py  doctor.py  egress.py  embeddings.py  footguns.py  hitl.py  hooks.py  ingress.py  launchd.py  main.py  manifest.py  mcp.py  mcp_health.py  mcp_manifest_gate.py  mcp_onboarding.py  mcp_tools.py  mcp_trust.py  memory.py  memory_hooks.py  options.py  (+10 more)
tests/: README.md  test_agent_client_lifecycle.py  test_agent_options.py  test_authorization.py  test_block_action_ids.py  test_bootstrap.py  test_budget.py  test_calibrate_dedup.py  test_channels_dashboard.py  test_cli_channels.py  test_cli_nightly.py  test_cli_status.py  test_config.py  test_costs.py  test_doctor.py  test_egress.py  test_fd_observability.py  test_footguns.py  test_gro395_observability.py  test_gro481_fd_leaks.py  test_hitl.py  test_hitl_integration.py  test_hitl_precheck.py  test_hooks.py  test_ingress.py  test_ingress_hitl.py  test_ingress_new.py  test_ingress_slack_helpers.py  test_isolation.py  test_main.py  test_manifest.py  test_manifest_ci_guard.py  test_mcp.py  test_mcp_health.py  test_mcp_manifest_trust.py  test_mcp_onboarding.py  test_memory.py  test_memory_search_tool.py  test_nightly_apply.py  test_nightly_harvest.py  (+19 more)
(+33 files in other folders)
